<resources>
    <string name="app_name">Cloudy</string>
    <string name="click_me">Click me !</string>
    <string name="longitude">Longitude :</string>
    <string name="latitude">Latitude :</string>
    <string name="_0_0">0.0</string>
    <string name="_44_84">44.84</string>
    <string name="_0_58">-0.58</string>
    <string name="logo">logo</string>
    <string name="indice_uv">Indice UV</string>
    <string name="_10">10</string>
    <string name="title_activity_daily_view">DailyViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_icon">menu_icon</string>
</resources>