<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo_light"
            android:contentDescription="@string/logo"
            android:layout_gravity="left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-black"
            android:textSize="25dp"
            android:textColor="@color/light_grey"
            android:layout_gravity="center"
            />


        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/seven"
            android:contentDescription="@string/menu_icon"
            android:scaleType="fitXY"
            android:background="@color/principal_blue"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            />



    </Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>